--- a/css/page.css
+++ b/css/page.css
@@ -1763,6 +1763,7 @@ nav.breadcrumbs-section a:last-child:before {
 
 nav.breadcrumbs-section a:last-child {
     margin-right: 0;
+    color: #000;
 }
 
 .phone-top>a img {
@@ -1811,4 +1812,62 @@ nav.breadcrumbs-section a:last-child {
 
 .text-content-recruitment .content h3 {
     font-size: 18px;
+}
+
+.content-detail-recruitment .form-recruitment {
+    border-radius: 8px;
+    background: #4ABAB9;
+    padding: 30px;
+}
+
+.content-detail-recruitment .form-recruitment .title-recruitment {
+    color: #fff;
+    margin-bottom: 30px;
+}
+
+.content-detail-recruitment .form-recruitment .content .form-group {
+    margin-bottom: 15px;
+}
+
+.content-detail-recruitment .form-recruitment .content .form-group label {
+    font-size: 16px;
+    color: #fff;
+}
+
+.content-detail-recruitment .form-recruitment .content .form-group>span {
+    display: block;
+    position: relative;
+}
+
+.content-detail-recruitment .form-recruitment .content .form-group .form-control {
+    height: 48px;
+    font-size: 16px;
+    border-radius: 8px;
+    padding: 15px 15px 15px 40px;
+}
+
+.content-detail-recruitment .form-recruitment .content .form-group img {
+    position: absolute;
+    top: 11px;
+    z-index: 9;
+    left: 10px;
+    width: 24px;
+    height: 24px;
+    object-fit: contain;
+}
+
+.content-detail-recruitment .form-recruitment .content .btn {
+    width: 100%;
+    height: 48px;
+    padding: 0;
+    background: var(--color-main-02);
+    line-height: 46px !important;
+    border: 1px solid var(--color-main-02);
+    border-radius: 8px;
+    color: #fff;
+}
+
+.content-detail-recruitment .form-recruitment .content .btn:hover {
+    color: var(--color-main-02);
+    background: none;
 }
