--- a/css/page.css
+++ b/css/page.css
@@ -83,7 +83,7 @@
     background-image: -moz-linear-gradient(left, #058dc2, #4abab9);
 }
 .color-main {
-    color: var(--color-main);
+    color: var(--color-main) !important;
 }
 ul {
     margin-bottom: 0 !important;
@@ -112,7 +112,16 @@ body {
 img {
     max-width: 100%;
 }
+span.swiper-pagination-bullet {
+    height: 12px;
+    width: 12px;
+    background: var(--color-main-02);
+    opacity: 1;
+}
 
+span.swiper-pagination-bullet.swiper-pagination-bullet-active {
+    background: var(--color-main);
+}
 .section-what-customers-about {
     background: #ecf7fa;
     padding-top: 50px;
@@ -1995,3 +2004,189 @@ nav.breadcrumbs-section a:last-child {
     margin-bottom: 15px;
     }
 }
+
+
+/*gioi_thieu*/
+.section-box-about-01 {
+    padding-bottom: 60px;
+}
+
+.section-box-about-01 .content .img img {
+    height: 400px;
+    width: 100%;
+    object-fit: cover;
+    border-radius: 24px;
+}
+
+.section-box-about-02 .img {
+    position: relative;
+    padding-top: 75%;
+    border-radius: 24px;
+    overflow: hidden;
+}
+
+.section-box-about-02 .img img {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+.section-box-about-02 .info-left .title-section-02 {
+    color: var(--color-main);
+    margin-bottom: 15px;
+}
+
+.section-box-about-02 .info-left .dsc {
+    margin-bottom: 15px;
+}
+.section-box-about-02 {
+    padding-bottom: 60px;
+}
+.section-box-about-04 {
+    background: var(--color-main);
+    padding: 30px 0;
+}
+
+.section-box-about-03 {
+    padding-bottom: 30px;
+    background-size: cover;
+    background-repeat: no-repeat;
+}
+
+.section-box-about-05 {
+    padding-bottom: 60px;
+    padding-top: 60px;
+}
+.section-box-about-03 .item {
+    text-align: center;
+    padding-bottom: 50px;
+}
+
+.section-box-about-03 .item .name {
+    font-size: 20px;
+    font-weight: 700;
+    margin-bottom: 15px;
+}
+
+.section-box-about-03 .item .check {
+    width: 30px;
+    height: 30px;
+    border: 1px solid var(--color-main-02);
+    border-radius: 50%;
+    margin-left: auto;
+    margin-right: auto;
+    margin-bottom: 15px;
+    background: #fff;
+    position: relative;
+}
+
+.section-box-about-03 .swiper-wrapper .swiper-slide:nth-child(1) .item .check {
+    background: #C9F0F0;
+    border: 0;
+}
+
+.section-box-about-03 .swiper-wrapper .swiper-slide:nth-child(1) .item .check:before {
+    content: '';
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    width: 20px;
+    height: 20px;
+    background: var(--color-main);
+    transform: translate(-50%, -50%);
+    border-radius: 50%;
+}
+
+.section-box-about-03 .item:before {
+    content: '';
+    position: absolute;
+    right: 0;
+    width: calc(50% - 25px);
+    background: #000;
+    height: 1px;
+    top: 15px;
+}
+
+.section-box-about-03 .item:after {
+    content: '';
+    position: absolute;
+    left: 0;
+    width: calc(50% - 25px);
+    background: #000;
+    height: 1px;
+    top: 15px;
+}
+
+.section-box-about-03 .swiper-wrapper .swiper-slide:nth-child(1) .item:after {
+    display: none;
+}
+.section-box-about-03 .item .dsc {
+    max-width: calc(100% - 30px);
+    display: table;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.section-box-about-04 .content {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.section-box-about-04 .content .info {
+    font-size: 32px;
+    color: #fff;
+    margin-right: 25px;
+}
+
+.section-box-about-04 .content .info .name {
+    font-weight: 700;
+}
+
+.section-box-about-04 .content span.number {
+    font-size: 90px;
+    font-weight: 700;
+    color: #fff;
+}
+
+.section-box-about-04 .content span {
+    font-size: 32px;
+    color: #fff;
+}
+.section-box-about-04 .content .icon img {
+    height: 80px;
+}
+
+.section-box-about-04 .content .icon {
+    margin-right: 25px;
+}
+.section-box-about-04 .content .icon img {
+    height: 80px;
+}
+
+.section-box-about-04 .content .icon {
+    margin-right: 25px;
+}
+
+.section-box-about-05 .content .info {
+    font-size: 20px;
+    max-width: 980px;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.section-box-about-05 .content .info p span {
+    font-weight: 700;
+}
+
+.section-box-about-05 .content .info ul {
+    padding-left: 0;
+}
+
+.section-box-about-05 .content .info ul>li {
+    list-style: none;
+    margin-bottom: 15px;
+}
+/*gioi_thieu*/
